2008-09-04  Alper KANAT  <alperkanat@gmail.com>

	* settings-example.py, extra/initials.py: removed english mail address..
	* extra/messages.py, blog/views.py, users/views.py: Corrected bugs that my
	friends are talking about.. Added a function to handle messaging to the
	user..
	* templates/blog/detail.html: thanks to Ozan GÜVEN, the detail page now
	shows the title of the entry as page title..
	* users/forms.py: thanks to Ozan GÜVEN, username validation is added..
	
2008-09-03  Alper KANAT  <alperkanat@gmail.com>

	* media/js/raptiye.js, comments/views.py, users/views.py,
	templates/users/profile.html, templates/blog/comments.html: Removed all
	hardcoded stupid lines within ajax responses..
	* blog/views.py, templates/blog/homepage.html: Changed all messages into a
	tuple since I have to loop over the messages to read them..
	* extra/wordpress.py: changed the database name to wordpress..
	* templates/users/profile.html: gravatar popup now works with enter key..
	* users/views.py: fixed a bug that was a really stupid mistake..
	
2008-09-02  Alper KANAT  <alperkanat@gmail.com>

	* extra/wordpress.py: Fixed some importer bug..
	* users/views.py: Fixed a bug that I discovered by chance..
	
2008-09-01  Alper KANAT  <alperkanat@gmail.com>

	* templates/blog/links.html, templates/blog/comments.html: Fixed some layout
	problems..
	* media/css/style.css, polls/views.py, polls/templatetags/poll_filters.py,
	polls/urls.py, templates/blog/poll.html, templates/blog/sidebar.html: polls
	application is now complete..
	* settings-example.py: changed the release scheme.. will release raptiye
	with a beta status..
	* extra/wordpress.py: importer's daily wtf code is now complete..
	* extra/messages.py: added a new message for polls app..
	* comments/views.py: comments can save the datetime now.. was saving the
	datetime of creation before.. i did this because of older comments in
	wordpress database..
	* comments/models.py: author's ip can be empty or null..
	