@@ -1,1 +1,1 @@
-{{ obj.title }}
+{{ obj.title|safe }}
