@@ -4,7 +4,7 @@
 
 <html>
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<link rel="icon" href="/media/images/favicon.png" type="image/png"/>
 		<link rel="stylesheet" href="/media/css/style.css">
 		<link href="{% url rss_feed "latest" %}" rel="alternate" type="application/rss+xml" title="raptiye rss feed" />
